python-compiler/tests/snapshots/functions__function_with_multiple_params.snap
---
source: tests/functions.rs
assertion_line: 33
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

define double @multiply(double %0, double %1, double %2) {
entry:
  %z = alloca double, align 8
  %y = alloca double, align 8
  %x = alloca double, align 8
  store double %0, ptr %x, align 8
  store double %1, ptr %y, align 8
  store double %2, ptr %z, align 8
  %x1 = load double, ptr %x, align 8
  %y2 = load double, ptr %y, align 8
  %multmp = fmul double %x1, %y2
  %z3 = load double, ptr %z, align 8
  %multmp4 = fmul double %multmp, %z3
  ret double %multmp4
}

define i32 @main() {
entry:
  %calltmp = call double @multiply(double 2.000000e+00, double 3.000000e+00, double 4.000000e+00)
  %printf_call = call i32 (ptr, ...) @printf(ptr @float_format_string, double %calltmp)
  ret i32 0
}

declare i32 @printf(ptr, ...)
