python-compiler/tests/snapshots/functions__function_with_variable.snap
---
source: tests/functions.rs
assertion_line: 85
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

define i64 @compute(i64 %0) {
entry:
  %y = alloca i64, align 8
  %x = alloca i64, align 8
  store i64 %0, ptr %x, align 4
  %x1 = load i64, ptr %x, align 4
  %addtmp = add i64 %x1, 10
  store i64 %addtmp, ptr %y, align 4
  %y2 = load i64, ptr %y, align 4
  %multmp = mul i64 %y2, 2
  ret i64 %multmp
}

define i32 @main() {
entry:
  %calltmp = call i64 @compute(i64 5)
  %printf_call = call i32 (ptr, ...) @printf(ptr @format_string, i64 %calltmp)
  ret i32 0
}

declare i32 @printf(ptr, ...)
